responsive navba and booking menu

--- a/budaya.html
+++ b/budaya.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -32,109 +36,103 @@
         </div>
     </div>
     <h2>DESTINASI</h2>
-    <div class="bot">
-        <div class="budaya1">
-            <a class="klikgambar" href="pemesanan.html"><div class="kemiren">
-                <img src="Gambar Mlakujatim/desa kemiren osing, banyuwangi.jpg" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Desa Kemiren<br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="jono">
-                <img src="Gambar Mlakujatim/desa jono.jpg" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Desa Jono<br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="bumiaji">
-                <img src="Gambar Mlakujatim/desa bumiaji.jpg" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Desa Bumiaji<br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="tengger">
-                <img src="Gambar Mlakujatim/desa tengger, bromo.jpg" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Desa Tengger <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-        </div> 
-        <div class="budaya2">
-            <a class="klikgambar" href="pemesanan.html"><div class="kaliandra">
-                <img src="Gambar Mlakujatim/desa kaliandra.png" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Desa Kaliandra <br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="ngrayudan">
-                <img src="Gambar Mlakujatim/desa wisata ngrayudan.jpg" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Desa Wisata Ngrayudan <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="osing">
-                <img src="Gambar Mlakujatim/desa wisata osing banyuwangi.jpg" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Desa Wisata Osing <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="kerapansapi">
-                <img src="Gambar Mlakujatim/kerapan sapi.jpg" alt="budaya"><br>
-                <div class="container">
-                    <p>
-                        Kerapan Sapi<br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-        </div>
+    <div class="grid-container">
+        <a class="klikgambar" href="pemesanan.html"><div class="kemiren">
+            <img src="Gambar Mlakujatim/desa kemiren osing, banyuwangi.jpg" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Desa Kemiren<br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="jono">
+            <img src="Gambar Mlakujatim/desa jono.jpg" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Desa Jono<br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="bumiaji">
+            <img src="Gambar Mlakujatim/desa bumiaji.jpg" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Desa Bumiaji<br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="tengger">
+            <img src="Gambar Mlakujatim/desa tengger, bromo.jpg" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Desa Tengger <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="kaliandra">
+            <img src="Gambar Mlakujatim/desa kaliandra.png" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Desa Kaliandra <br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="ngrayudan">
+            <img src="Gambar Mlakujatim/desa wisata ngrayudan.jpg" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Desa Wisata Ngrayudan <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="osing">
+            <img src="Gambar Mlakujatim/desa wisata osing banyuwangi.jpg" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Desa Wisata Osing <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="kerapansapi">
+            <img src="Gambar Mlakujatim/kerapan sapi.jpg" alt="budaya"><br>
+            <div class="container">
+                <p>
+                    Kerapan Sapi<br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
     </div>
     <div class="footer">
         <div class="simbol">
             <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
             <p><i>Jalan-Jalan di Jawa Timur</i></p>
         </div>
-        <div class="bagi2">
-            <div class="definisi">
-                <p>Mlakujatim merupakan website pariwisata yang <br>
-                    mencakup daerah Jawa Timur. Turis dapat <br>
-                    melihat tempat-tempat pariwisata yang populer <br>
-                    serta jika ada masyarakat Jawa Timur ingin <br>
-                    menambahkan tempat pariwisata daerah mereka <br>
-                    dan menjadi guide tour dalam rencana wisata <br>
-                    yang telah mereka daftarkan.
-                </p>
-            </div>
-            <div class="flexfooter">
-                <div class="link">
-                    <p>Follow Us:</p><br>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
-                    <p>www.mlakujatim.com</p>
-                <div class="link">
-            </div>
+        <div class="definisi">
+            <p>Mlakujatim merupakan website pariwisata yang <br>
+                mencakup daerah Jawa Timur. Turis dapat <br>
+                melihat tempat-tempat pariwisata yang populer <br>
+                serta jika ada masyarakat Jawa Timur ingin <br>
+                menambahkan tempat pariwisata daerah mereka <br>
+                dan menjadi guide tour dalam rencana wisata <br>
+                yang telah mereka daftarkan.
+            </p>
+        </div>
+        <div class="flexfooter">
+            <div class="link">
+                <p>Follow Us:</p><br>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                <p>www.mlakujatim.com</p>
+            <div class="link">
         </div>
     </div>
 </body>
