--- a/kuliner.html
+++ b/kuliner.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -32,109 +36,103 @@
         </div>
     </div>
     <h2>DESTINASI</h2>
-    <div class="bot">
-        <div class="kuliner1">
-            <a class="klikgambar" href="pemesanan.html"><div class="baksomalang">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/bakso malang (malang).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Bakso Malang<br>
-                        Rp50.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="bebeksinjay">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/bebek sinjay (bangkalan, madura).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Bebek Sinjay Bangkalan <br>
-                        Rp70.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="lodhoayam">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/lodho ayam (tulungagung).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Lodho Ayam Tulungagung <br>
-                        Rp60.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="lontongbalap">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/lontong balap (surabaya).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Lontong Balap Surabaya<br>
-                        Rp60.000
-                    </p>
-                </div>
-            </div></a>
-        </div> 
-        <div class="kuliner2">
-            <a class="klikgambar" href="pemesanan.html"><div class="rawonsetan">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/rawon setan mbak endang (surabaya).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Rawon Setan Surabaya <br>
-                        Rp50.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="rujaksoto">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/rujak soto (banyuwangi).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Rujak Soto Banyuwangi <br>
-                        Rp40.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="sotolamongan">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/soto lamongan (lamongan).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Soto Lamongan <br>
-                        Rp40.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="tahutek">
-                <img src="Gambar Mlakujatim/makanan khas jawatimur/tahu tek(lamongan atau surabaya).jpg" alt="kuliner"><br>
-                <div class="container">
-                    <p>
-                        Tahu Tek Lamongan <br>
-                        Rp40.000
-                    </p>
-                </div>
-            </div></a>
-        </div>
+    <div class="grid-container">
+        <a class="klikgambar" href="pemesanan.html"><div class="baksomalang">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/bakso malang (malang).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Bakso Malang<br>
+                    Rp50.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="bebeksinjay">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/bebek sinjay (bangkalan, madura).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Bebek Sinjay Bangkalan <br>
+                    Rp70.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="lodhoayam">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/lodho ayam (tulungagung).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Lodho Ayam Tulungagung <br>
+                    Rp60.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="lontongbalap">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/lontong balap (surabaya).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Lontong Balap Surabaya<br>
+                    Rp60.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="rawonsetan">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/rawon setan mbak endang (surabaya).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Rawon Setan Surabaya <br>
+                    Rp50.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="rujaksoto">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/rujak soto (banyuwangi).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Rujak Soto Banyuwangi <br>
+                    Rp40.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="sotolamongan">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/soto lamongan (lamongan).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Soto Lamongan <br>
+                    Rp40.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="tahutek">
+            <img src="Gambar Mlakujatim/makanan khas jawatimur/tahu tek(lamongan atau surabaya).jpg" alt="kuliner"><br>
+            <div class="container">
+                <p>
+                    Tahu Tek Lamongan <br>
+                    Rp40.000
+                </p>
+            </div>
+        </div></a>
     </div>
     <div class="footer">
         <div class="simbol">
             <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
             <p><i>Jalan-Jalan di Jawa Timur</i></p>
         </div>
-        <div class="bagi2">
-            <div class="definisi">
-                <p>Mlakujatim merupakan website pariwisata yang <br>
-                    mencakup daerah Jawa Timur. Turis dapat <br>
-                    melihat tempat-tempat pariwisata yang populer <br>
-                    serta jika ada masyarakat Jawa Timur ingin <br>
-                    menambahkan tempat pariwisata daerah mereka <br>
-                    dan menjadi guide tour dalam rencana wisata <br>
-                    yang telah mereka daftarkan.
-                </p>
-            </div>
-            <div class="flexfooter">
-                <div class="link">
-                    <p>Follow Us:</p><br>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
-                    <p>www.mlakujatim.com</p>
-                <div class="link">
-            </div>
+        <div class="definisi">
+            <p>Mlakujatim merupakan website pariwisata yang <br>
+                mencakup daerah Jawa Timur. Turis dapat <br>
+                melihat tempat-tempat pariwisata yang populer <br>
+                serta jika ada masyarakat Jawa Timur ingin <br>
+                menambahkan tempat pariwisata daerah mereka <br>
+                dan menjadi guide tour dalam rencana wisata <br>
+                yang telah mereka daftarkan.
+            </p>
+        </div>
+        <div class="flexfooter">
+            <div class="link">
+                <p>Follow Us:</p><br>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                <p>www.mlakujatim.com</p>
+            <div class="link">
         </div>
     </div>
 </body>
