--- a/museum.html
+++ b/museum.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -32,109 +36,103 @@
         </div>
     </div>
     <h2>DESTINASI</h2>
-    <div class="bot">
-        <div class="museum1">
-            <a class="klikgambar" href="pemesanan.html"><div class="angkutmalang">
-                <img src="Gambar Mlakujatim/museum angkut malang.jpg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Angkut Malang <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="satwa">
-                <img src="Gambar Mlakujatim/Museum satwa.jpg" alt=""><br>
-                <div class="container">
-                    <p>
-                        Museum Satwa <br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="brawijaya">
-                <img src="Gambar Mlakujatim/museum brawijaya.jpg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Brawijaya <br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="tantular">
-                <img src="Gambar Mlakujatim/museum mpu tantular.jpg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Mpu Tantular <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-        </div> 
-        <div class="museum2">
-            <a class="klikgambar" href="pemesanan.html"><div class="trisula">
-                <img src="Gambar Mlakujatim/Monumen trisula blitar.jpg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Trisula <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="karno">
-                <img src="Gambar Mlakujatim/museum bung karno, blitar.jpeg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Bung Karno <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="november10">
-                <img src="Gambar Mlakujatim/museum 10 novembe, surabaya.jpeg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum 10 November <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="tubuh">
-                <img src="Gambar Mlakujatim/museum tubuh batu, malang.jpeg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Tubuh Batu <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-        </div>
+    <div class="grid-container">
+        <a class="klikgambar" href="pemesanan.html"><div class="angkutmalang">
+            <img src="Gambar Mlakujatim/museum angkut malang.jpg" alt="museum"><br>
+            <div class="container">
+                <p>
+                    Museum Angkut Malang <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="satwa">
+            <img src="Gambar Mlakujatim/Museum satwa.jpg" alt=""><br>
+            <div class="container">
+                <p>
+                    Museum Satwa <br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="brawijaya">
+            <img src="Gambar Mlakujatim/museum brawijaya.jpg" alt="museum"><br>
+            <div class="container">
+                <p>
+                    Museum Brawijaya <br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="tantular">
+            <img src="Gambar Mlakujatim/museum mpu tantular.jpg" alt="museum"><br>
+            <div class="container">
+                <p>
+                    Museum Mpu Tantular <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="trisula">
+            <img src="Gambar Mlakujatim/Monumen trisula blitar.jpg" alt="museum"><br>
+            <div class="container">
+                <p>
+                    Museum Trisula <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="karno">
+            <img src="Gambar Mlakujatim/museum bung karno, blitar.jpeg" alt="museum"><br>
+            <div class="container">
+                <p>
+                    Museum Bung Karno <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="november10">
+            <img src="Gambar Mlakujatim/museum 10 novembe, surabaya.jpeg" alt="museum"><br>
+            <div class="container">
+                <p>
+                    Museum 10 November <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="tubuh">
+            <img src="Gambar Mlakujatim/museum tubuh batu, malang.jpeg" alt="museum"><br>
+            <div class="container">
+                <p>
+                    Museum Tubuh Batu <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
     </div>
     <div class="footer">
         <div class="simbol">
             <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
             <p><i>Jalan-Jalan di Jawa Timur</i></p>
         </div>
-        <div class="bagi2">
-            <div class="definisi">
-                <p>Mlakujatim merupakan website pariwisata yang <br>
-                    mencakup daerah Jawa Timur. Turis dapat <br>
-                    melihat tempat-tempat pariwisata yang populer <br>
-                    serta jika ada masyarakat Jawa Timur ingin <br>
-                    menambahkan tempat pariwisata daerah mereka <br>
-                    dan menjadi guide tour dalam rencana wisata <br>
-                    yang telah mereka daftarkan.
-                </p>
-            </div>
-            <div class="flexfooter">
-                <div class="link">
-                    <p>Follow Us:</p><br>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
-                    <p>www.mlakujatim.com</p>
-                <div class="link">
-            </div>
+        <div class="definisi">
+            <p>Mlakujatim merupakan website pariwisata yang <br>
+                mencakup daerah Jawa Timur. Turis dapat <br>
+                melihat tempat-tempat pariwisata yang populer <br>
+                serta jika ada masyarakat Jawa Timur ingin <br>
+                menambahkan tempat pariwisata daerah mereka <br>
+                dan menjadi guide tour dalam rencana wisata <br>
+                yang telah mereka daftarkan.
+            </p>
+        </div>
+        <div class="flexfooter">
+            <div class="link">
+                <p>Follow Us:</p><br>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                <p>www.mlakujatim.com</p>
+            <div class="link">
         </div>
     </div>
 </body>
