--- a/alam.html
+++ b/alam.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -32,109 +36,103 @@
         </div>
     </div>
     <h2>DESTINASI</h2>
-    <div class="bot">
-        <div class="alam1">
-            <a class="klikgambar" href="pemesanan.html"><div class="baluran">
-                <img src="Gambar Mlakujatim/taman nasional baluran.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Taman Nasional Baluran <br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="sempu">
-                <img src="Gambar Mlakujatim/Pulau-Sempu-Malang-300x212.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Pulau Sempu <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="ranukumbolo">
-                <img src="Gambar Mlakujatim/Ranu-Kumbolo-Malang-300x178.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Ranu Kumbolo <br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="ijen">
-                <img src="Gambar Mlakujatim/Kawah-Ijen-Bondowoso-300x200.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Kawah Ijen <br>
-                        Rp700.000
-                    </p>
-                </div>
-            </div></a>
-        </div> 
-        <div class="alam2">
-            <a class="klikgambar" href="pemesanan.html"><div class="bromo">
-                <img src="Gambar Mlakujatim/bromo.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Gunung Bromo<br>
-                        Rp1.000.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="maharani">
-                <img src="Gambar Mlakujatim/gua maharani lamongan.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Gua Maharani <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="telaga">
-                <img src="Gambar Mlakujatim/telaga-sarangan-300x225.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Telaga Sarangan <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="airterjun">
-                <img src="Gambar Mlakujatim/Air-Terjun-Madangkaripura-Probolinggo-300x200.jpg" alt="alam"><br>
-                <div class="container">
-                    <p>
-                        Air Terjun Madangkaripura <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-        </div>
+    <div class="grid-container">
+        <a class="klikgambar" href="pemesanan.html"><div class="baluran">
+            <img src="Gambar Mlakujatim/taman nasional baluran.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Taman Nasional Baluran <br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="sempu">
+            <img src="Gambar Mlakujatim/Pulau-Sempu-Malang-300x212.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Pulau Sempu <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="ranukumbolo">
+            <img src="Gambar Mlakujatim/Ranu-Kumbolo-Malang-300x178.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Ranu Kumbolo <br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="ijen">
+            <img src="Gambar Mlakujatim/Kawah-Ijen-Bondowoso-300x200.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Kawah Ijen <br>
+                    Rp700.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="bromo">
+            <img src="Gambar Mlakujatim/bromo.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Gunung Bromo<br>
+                    Rp1.000.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="maharani">
+            <img src="Gambar Mlakujatim/gua maharani lamongan.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Gua Maharani <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="telaga">
+            <img src="Gambar Mlakujatim/telaga-sarangan-300x225.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Telaga Sarangan <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="airterjun">
+            <img src="Gambar Mlakujatim/Air-Terjun-Madangkaripura-Probolinggo-300x200.jpg" alt="alam"><br>
+            <div class="container">
+                <p>
+                    Air Terjun Madangkaripura <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
     </div>
     <div class="footer">
         <div class="simbol">
             <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
             <p><i>Jalan-Jalan di Jawa Timur</i></p>
         </div>
-        <div class="bagi2">
-            <div class="definisi">
-                <p>Mlakujatim merupakan website pariwisata yang <br>
-                    mencakup daerah Jawa Timur. Turis dapat <br>
-                    melihat tempat-tempat pariwisata yang populer <br>
-                    serta jika ada masyarakat Jawa Timur ingin <br>
-                    menambahkan tempat pariwisata daerah mereka <br>
-                    dan menjadi guide tour dalam rencana wisata <br>
-                    yang telah mereka daftarkan.
-                </p>
-            </div>
-            <div class="flexfooter">
-                <div class="link">
-                    <p>Follow Us:</p><br>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
-                    <p>www.mlakujatim.com</p>
-                <div class="link">
-            </div>
+        <div class="definisi">
+            <p>Mlakujatim merupakan website pariwisata yang <br>
+                mencakup daerah Jawa Timur. Turis dapat <br>
+                melihat tempat-tempat pariwisata yang populer <br>
+                serta jika ada masyarakat Jawa Timur ingin <br>
+                menambahkan tempat pariwisata daerah mereka <br>
+                dan menjadi guide tour dalam rencana wisata <br>
+                yang telah mereka daftarkan.
+            </p>
+        </div>
+        <div class="flexfooter">
+            <div class="link">
+                <p>Follow Us:</p><br>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                <p>www.mlakujatim.com</p>
+            <div class="link">
         </div>
     </div>
 </body>
