--- a/pantai.html
+++ b/pantai.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -32,109 +36,103 @@
         </div>
     </div>
     <h2>DESTINASI</h2>
-    <div class="bot">
-        <div class="pantai1">
-            <a class="klikgambar" href="pemesanan.html"><div class="balekambang">
-                <img src="Gambar Mlakujatim/pantai balekambang malang.jpg" alt="pantai"><br>
-                <div class="container">
-                    <p>
-                        Pantai Balekambang<br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="kenjeran">
-                <img src="Gambar Mlakujatim/pantai kenjeran surabaya.jpg" alt=""><br>
-                <div class="container">
-                    <p>
-                        Pantai Kenjeran <br>
-                        Rp600.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="kutang">
-                <img src="Gambar Mlakujatim/pantai kutang lamongan.png" alt="pantai"><br>
-                <div class="container">
-                    <p>
-                        Pantai Kutang <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="watuulo">
-                <img src="Gambar Mlakujatim/watu ulo.jpg" alt="pantai"><br>
-                <div class="container">
-                    <p>
-                        Pantai Watu Ulo <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-        </div> 
-        <div class="pantai2">
-            <a class="klikgambar" href="pemesanan.html"><div class="papuma">
-                <img src="Gambar Mlakujatim/papuma.jpg" alt="pantai"><br>
-                <div class="container">
-                    <p>
-                        Pantai Papuma <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="kodok">
-                <img src="Gambar Mlakujatim/pantai-kodok.jpg" alt="pantai"><br>
-                <div class="container">
-                    <p>
-                        Pantai Kodok <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="klayar">
-                <img src="Gambar Mlakujatim/Pantai-Klayar-Pacitan-300x166.jpg" alt="pantai"><br>
-                <div class="container">
-                    <p>
-                        Pantai Klayar <br>
-                        Rp400.000
-                    </p>
-                </div>
-            </div></a>
-            <a class="klikgambar" href="pemesanan.html"><div class="pulaumerah">
-                <img src="Gambar Mlakujatim/Pantai-Pulau-Merah-Banyuwangi.jpg" alt="pantai"><br>
-                <div class="container">
-                    <p>
-                        Pantai Pulau Merah <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div></a>
-        </div>
+    <div class="grid-container">
+        <a class="klikgambar" href="pemesanan.html"><div class="balekambang">
+            <img src="Gambar Mlakujatim/pantai balekambang malang.jpg" alt="pantai"><br>
+            <div class="container">
+                <p>
+                    Pantai Balekambang<br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="kenjeran">
+            <img src="Gambar Mlakujatim/pantai kenjeran surabaya.jpg" alt=""><br>
+            <div class="container">
+                <p>
+                    Pantai Kenjeran <br>
+                    Rp600.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="kutang">
+            <img src="Gambar Mlakujatim/pantai kutang lamongan.png" alt="pantai"><br>
+            <div class="container">
+                <p>
+                    Pantai Kutang <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="watuulo">
+            <img src="Gambar Mlakujatim/watu ulo.jpg" alt="pantai"><br>
+            <div class="container">
+                <p>
+                    Pantai Watu Ulo <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="papuma">
+            <img src="Gambar Mlakujatim/papuma.jpg" alt="pantai"><br>
+            <div class="container">
+                <p>
+                    Pantai Papuma <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="kodok">
+            <img src="Gambar Mlakujatim/pantai-kodok.jpg" alt="pantai"><br>
+            <div class="container">
+                <p>
+                    Pantai Kodok <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="klayar">
+            <img src="Gambar Mlakujatim/Pantai-Klayar-Pacitan-300x166.jpg" alt="pantai"><br>
+            <div class="container">
+                <p>
+                    Pantai Klayar <br>
+                    Rp400.000
+                </p>
+            </div>
+        </div></a>
+        <a class="klikgambar" href="pemesanan.html"><div class="pulaumerah">
+            <img src="Gambar Mlakujatim/Pantai-Pulau-Merah-Banyuwangi.jpg" alt="pantai"><br>
+            <div class="container">
+                <p>
+                    Pantai Pulau Merah <br>
+                    Rp500.000
+                </p>
+            </div>
+        </div></a>
     </div>
     <div class="footer">
         <div class="simbol">
             <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
             <p><i>Jalan-Jalan di Jawa Timur</i></p>
         </div>
-        <div class="bagi2">
-            <div class="definisi">
-                <p>Mlakujatim merupakan website pariwisata yang <br>
-                    mencakup daerah Jawa Timur. Turis dapat <br>
-                    melihat tempat-tempat pariwisata yang populer <br>
-                    serta jika ada masyarakat Jawa Timur ingin <br>
-                    menambahkan tempat pariwisata daerah mereka <br>
-                    dan menjadi guide tour dalam rencana wisata <br>
-                    yang telah mereka daftarkan.
-                </p>
-            </div>
-            <div class="flexfooter">
-                <div class="link">
-                    <p>Follow Us:</p><br>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
-                    <p>www.mlakujatim.com</p>
-                <div class="link">
-            </div>
+        <div class="definisi">
+            <p>Mlakujatim merupakan website pariwisata yang <br>
+                mencakup daerah Jawa Timur. Turis dapat <br>
+                melihat tempat-tempat pariwisata yang populer <br>
+                serta jika ada masyarakat Jawa Timur ingin <br>
+                menambahkan tempat pariwisata daerah mereka <br>
+                dan menjadi guide tour dalam rencana wisata <br>
+                yang telah mereka daftarkan.
+            </p>
+        </div>
+        <div class="flexfooter">
+            <div class="link">
+                <p>Follow Us:</p><br>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                <p>www.mlakujatim.com</p>
+            <div class="link">
         </div>
     </div>
 </body>
