ditambahi file baru

--- a/edit akun.html
+++ b/edit akun.html
@@ -32,8 +32,8 @@
                     <p>Nama</p>
                 </div>
                 <hr><br>
-                <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <input type="text" id="masukkannama" placeholder=" Perbarui nama" >
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nama Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -62,7 +62,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor hp">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nomor Hp Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -71,7 +71,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Email Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
@@ -86,7 +86,7 @@
                 <div class="google">
                     <img src="Gambar Mlakujatim/google.png" alt="">
                     <p>Google</p>
-                    <a class="perbarui" href="#"><button type="submit">tambah</button></a>
+                    <a class="perbarui" href=""><button type="submit">tambah</button></a>
                 </div>
             </div>
         </div>
