--- a/jadi bayar.html
+++ b/jadi bayar.html
@@ -46,10 +46,10 @@
             </p><br>
             <div class="jadi">
                 <div class="jadiya">
-                    <a class="pencet" href="#"><button type="submit">Ya</button></a>
+                    <button type="submit" onclick="alert('Transaksi Berhasil')"><a class="pencet" href="alam.html">Ya</a></button>
                 </div>
                 <div class="jaditdk">
-                    <a class="pencet" href="#"><button type="submit">Tidak</button></a>
+                    <button type="submit" onclick="alert('Transaksi di Batalkan')"><a class="pencet" href="pemesanan.html">Tidak</a></button>
                 </div>
             </div>
         </form>
