--- a/editpass.html
+++ b/editpass.html
@@ -33,7 +33,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nama Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -47,7 +47,7 @@
                 <input type="text" id="masukkanpass" placeholder=" Masukkan password baru"><br>
                 <p>Konfirmasi password</p>
                 <input type="text" id="masukkanpass" placeholder=" Masukkan password lama">
-                <a class="perbarui" href="edit akun.html"><button type="submit">simpan</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Password Berhasil Diperbaharui')">simpan</button></a>
             </div>
             <div class="verifikasi">
                 <div class="namabagianatas">
@@ -67,7 +67,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor hp">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nomor HP Berhasil Diperbaharui')" >perbarui</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -76,7 +76,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Email Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
