navbar responsive aman
sama perubahan di file mu sebelumnya udah tak masukin juga put, gausah upload ulang

--- a/editpass.html
+++ b/editpass.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -33,7 +37,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nama Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -46,8 +50,8 @@
                 <p>Password baru</p>
                 <input type="text" id="masukkanpass" placeholder=" Masukkan password baru"><br>
                 <p>Konfirmasi password</p>
-                <input type="text" id="masukkanpass" placeholder=" Masukkan password lama">
-                <a class="perbarui" href="edit akun.html"><button type="submit">simpan</button></a>
+                <input type="text" id="masukkanpass" placeholder=" Masukkan password baru">
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Password Berhasil Diperbaharui')">simpan</button></a>
             </div>
             <div class="verifikasi">
                 <div class="namabagianatas">
@@ -67,7 +71,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor hp">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nomor HP Berhasil Diperbaharui')" >perbarui</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -76,7 +80,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Email Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
