--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -35,6 +39,10 @@
             <a class="jejak" href="edit akun.html"><button>Atur akun</button></a>
         </div>
         <br><br>
+        <div class="kelolawisata">
+            <a class="jejak" href="kelolawisata.html"><button>Kelola tempat pariwisata</button></a>
+        </div>
+        <br><br>
         <div class="tambahwisata">
             <a class="jejak" href="addwisata.html"><button>Tambah tempat pariwisata</button></a>
         </div>
@@ -44,26 +52,24 @@
             <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
             <p><i>Jalan-Jalan di Jawa Timur</i></p>
         </div>
-        <div class="bagi2">
-            <div class="definisi">
-                <p>Mlakujatim merupakan website pariwisata yang <br>
-                    mencakup daerah Jawa Timur. Turis dapat <br>
-                    melihat tempat-tempat pariwisata yang populer <br>
-                    serta jika ada masyarakat Jawa Timur ingin <br>
-                    menambahkan tempat pariwisata daerah mereka <br>
-                    dan menjadi guide tour dalam rencana wisata <br>
-                    yang telah mereka daftarkan.
-                </p>
-            </div>
-            <div class="flexfooter">
-                <div class="link">
-                    <p>Follow Us:</p><br>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
-                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
-                    <p>www.mlakujatim.com</p>
-                <div class="link">
-            </div>
+        <div class="definisi">
+            <p>Mlakujatim merupakan website pariwisata yang <br>
+                mencakup daerah Jawa Timur. Turis dapat <br>
+                melihat tempat-tempat pariwisata yang populer <br>
+                serta jika ada masyarakat Jawa Timur ingin <br>
+                menambahkan tempat pariwisata daerah mereka <br>
+                dan menjadi guide tour dalam rencana wisata <br>
+                yang telah mereka daftarkan.
+            </p>
+        </div>
+        <div class="flexfooter">
+            <div class="link">
+                <p>Follow Us:</p><br>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                <p>www.mlakujatim.com</p>
+            <div class="link">
         </div>
     </div>
 </body>
