--- a/edit akun.html
+++ b/edit akun.html
@@ -36,8 +36,8 @@
                     <p>Nama</p>
                 </div>
                 <hr><br>
-                <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <input type="text" id="masukkannama" placeholder=" Perbarui nama" >
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nama Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -66,7 +66,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor hp">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nomor Hp Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -75,7 +75,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Email Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
