--- a/jadi bayar.html
+++ b/jadi bayar.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <nav>
-        <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
+        <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="klik" href="alam.html">Booking</a></li>
@@ -46,10 +50,10 @@
             </p><br>
             <div class="jadi">
                 <div class="jadiya">
-                    <a class="pencet" href="#"><button type="submit">Ya</button></a>
+                    <a class="pencet" href="alam.html"><button type="submit" onclick="alert('Transaksi Berhasil')">Ya</button></a>
                 </div>
                 <div class="jaditdk">
-                    <a class="pencet" href="#"><button type="submit">Tidak</button></a>
+                    <a class="pencet" href="pemesanan.html"><button type="submit" onclick="alert('Transaksi di Batalkan')">Tidak</button></a>
                 </div>
             </div>
         </form>
