--- a/pencarian.html
+++ b/pencarian.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
+        </label>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a  class="klik" href="alam.html">Booking</a></li>
+            <li><a class="klik" href="alam.html">Booking</a></li>
             <li><a href="profile.html">Profile</a></li>
             <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
